kustomize/overlays/production/patches/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  rules:
    - host: myapp.azurelaboratory.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: myapp-service
                port:
                  number: 3000
  tls:
    - secretName: myapp-tls
      hosts:
        - myapp.azurelaboratory.com
